# imap-rs

./: Cargo.toml  README.md
imap-core/: Cargo.toml
imap-core/src/: bodystructure.rs  codec.rs  error.rs  fetch.rs  lib.rs  response.rs  search.rs  select.rs  store.rs  types.rs
imap-core/tests/: codec_test.rs  wire.rs
imap-server/: Cargo.toml
imap-server/examples/: memstore.rs
imap-server/src/: backend.rs  conn.rs  lib.rs  server.rs  tracker.rs
imap-server/src/cmd/: append.rs  auth.rs  copy.rs  expunge.rs  fetch.rs  idle.rs  mailbox.rs  mod.rs  noop.rs  search.rs  select.rs  store.rs  writer.rs
imap-server/tests/: roundtrip.rs  tracker_test.rs
